# tracenexus

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  project_requirements.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
examples/: client.py
scripts/: adhoc_validate_traces.py  validate_traces.py
tests/: test_mcp_server.py  test_providers.py
tracenexus/: __init__.py  __main__.py  cli.py
tracenexus/providers/: __init__.py  langfuse.py  langsmith.py
tracenexus/server/: __init__.py  mcp_server.py
validation/: langfuse_trace_ids.json
